removed nontrivial javafx warning in gradle build